--- a/addon/templates/components/mdc-temporary-drawer.hbs
+++ b/addon/templates/components/mdc-temporary-drawer.hbs
@@ -1,6 +1,6 @@
 {{#if hasSpacer}}
   <div class="mdc-temporary-drawer__toolbar-spacer"></div>
 {{/if}}
-<nav class="mdc-temporary-drawer__drawer">
-  {{yield (hash list=(component 'mdc-list' class='mdc-temporary-drawer__content' tagName='nav'))}}
+<nav class="mdc-drawer__drawer">
+  {{yield (hash list=(component 'mdc-list' class='mdc-drawer__content' tagName='nav'))}}
 </nav>
