fix mdc-floating-label for textfield

--- a/addon/templates/components/mdc-textarea.hbs
+++ b/addon/templates/components/mdc-textarea.hbs
@@ -16,7 +16,7 @@
   aria-controls=ariaControls}}
 
 {{#if label}}
-  <label class="mdc-text-field__label" for={{inputId}}>{{label}}</label>
+  <label class="mdc-floating-label" for={{inputId}}>{{label}}</label>
 {{/if}}
 {{#if isTrailingIcon}}
   {{mdc-icon icon class="mdc-text-field__icon" tabindex=iconTabindex}}
