--- a/addon/templates/components/mdc-textfield.hbs
+++ b/addon/templates/components/mdc-textfield.hbs
@@ -16,7 +16,7 @@
 
 {{#if label}}
   {{#unless isFullWidth}}
-    <label class="mdc-text-field__label" for={{inputId}}>{{label}}</label>
+    <label class="mdc-floating-label" for={{inputId}}>{{label}}</label>
   {{/unless}}
 {{/if}}
 {{#if isTrailingIcon}}
