--- a/tests/dummy/app/templates/drawer.hbs
+++ b/tests/dummy/app/templates/drawer.hbs
@@ -25,7 +25,7 @@
     <div class="item">{{code-snippet name="mdc-drawer__temporary.hbs"}}</div>
   </section>
 </div>
-
+{{!-- 
 <div class="demo">
   <h1 class="mdc-typography--title">Persistent Drawer</h1>
   <section>
@@ -110,4 +110,4 @@
     </main>
     <div class="item">{{code-snippet name="mdc-drawer__permanent-below.hbs"}}</div>
   </section>
-</div>
+</div> --}}
