--- a/addon/templates/components/mdc-temporary-drawer.hbs
+++ b/addon/templates/components/mdc-temporary-drawer.hbs
@@ -1,6 +1,12 @@
 {{#if hasSpacer}}
   <div class="mdc-temporary-drawer__toolbar-spacer"></div>
 {{/if}}
-<nav class="mdc-drawer__drawer">
-  {{yield (hash list=(component 'mdc-list' class='mdc-drawer__content' tagName='nav'))}}
-</nav>
+{{#if rtl}}
+  <nav class="mdc-drawer__drawer" dir="rtl">
+    {{yield (hash list=(component 'mdc-list' class='mdc-drawer__content' tagName='nav'))}}
+  </nav>
+{{else}}
+  <nav class="mdc-drawer__drawer">
+    {{yield (hash list=(component 'mdc-list' class='mdc-drawer__content' tagName='nav'))}}
+  </nav>
+{{/if}}
